--- a/main.ipynb
+++ b/main.ipynb
@@ -2,22 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "apple is not a valid page number. Default value of 1 was set\n",
-      "1 pages were scraped\n",
+      "2 pages were scraped\n",
       "The lowest price is 529.0 €:\n",
       " Apple iPhone 11, juodas, 4GB/64GB\n",
       " \n",
       " The highest price is 2200.36 €:\n",
       " Apple iPhone 14 Pro Max 512GB Silver\n",
       " \n",
-      " The average price is 1075.2 €\n"
+      " The average price is 1059.82 €\n"
      ]
     },
     {
@@ -69,225 +68,41 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Apple iPhone SE 64GB Midnight 3rd gen</td>\n",
-       "      <td>532.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Apple iPhone 11, juodas, 4GB/128GB</td>\n",
-       "      <td>619.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Apple iPhone 14 128GB Midnight</td>\n",
-       "      <td>843.08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Apple iPhone 14 Pro 128GB Deep Purple</td>\n",
-       "      <td>1109.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Apple iPhone 13 256GB Midnight</td>\n",
-       "      <td>979.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Apple iPhone 11, juodas, 4GB/64GB</td>\n",
-       "      <td>529.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Apple iPhone 14 Pro 128GB Space Black</td>\n",
-       "      <td>1109.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Apple iPhone 13 128GB Midnight</td>\n",
-       "      <td>759.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Apple iPhone 14 Plus 128GB Midnight</td>\n",
-       "      <td>1113.09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Apple iPhone 14 Pro 128GB Gold</td>\n",
-       "      <td>1109.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Apple iPhone 14 256GB Purple</td>\n",
-       "      <td>1094.89</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Apple iPhone 13 128GB Starlight</td>\n",
-       "      <td>759.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Apple iPhone 12 64GB Black</td>\n",
-       "      <td>619.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Apple iPhone 11 64GB White</td>\n",
-       "      <td>529.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Apple iPhone 14 Pro Max 256GB Space Black</td>\n",
-       "      <td>1929.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Apple iPhone 14 Pro 512GB Deep Purple</td>\n",
-       "      <td>1667.43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Apple iPhone 13 256GB Green</td>\n",
-       "      <td>1094.37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Apple iPhone 12 256GB White</td>\n",
-       "      <td>1039.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Apple iPhone 14 128GB RED</td>\n",
-       "      <td>972.05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Apple iPhone 12 128GB Blue</td>\n",
-       "      <td>759.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Apple iPhone 14 Pro Max 512GB Deep Purple</td>\n",
-       "      <td>2173.89</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Apple iPhone 13 mini, žalias, 4GB/256GB</td>\n",
-       "      <td>1109.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Apple iPhone 14, violetinis, 6GB/128GB</td>\n",
-       "      <td>939.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Apple iPhone 14 Pro Max 128GB Deep Purple</td>\n",
-       "      <td>1204.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Apple iPhone 14 Plus 256GB Midnight</td>\n",
-       "      <td>1245.03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Apple iPhone SE 128GB Starlight 3rd gen</td>\n",
-       "      <td>823.89</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>Apple iPhone 13 128GB Blue</td>\n",
-       "      <td>748.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>Apple iPhone 13 mini 128GB Starlight</td>\n",
-       "      <td>759.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>Apple iPhone 12 64GB RED</td>\n",
-       "      <td>605.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>Apple iPhone XR, juodas, 3GB/64GB</td>\n",
-       "      <td>554.29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>Apple iPhone 14 Pro, violetinis, 6GB/256GB</td>\n",
-       "      <td>1339.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>Apple iPhone 14 Plus 512GB RED</td>\n",
-       "      <td>1439.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>Apple iPhone 14 Pro Max 128GB Silver</td>\n",
-       "      <td>1706.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>Apple iPhone 14 Pro Max 256GB Deep Purple</td>\n",
-       "      <td>1872.91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>Apple iPhone SE 64GB RED 3rd gen</td>\n",
        "      <td>539.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>Apple iPhone 13, raudonas, 4GB/128GB</td>\n",
-       "      <td>749.00</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>Apple iPhone 13 512GB Pink</td>\n",
-       "      <td>1261.67</td>\n",
+       "      <th>91</th>\n",
+       "      <td>Apple iPhone 13 mini 128GB RED</td>\n",
+       "      <td>748.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>Apple iPhone 13, žalias, 4GB/128GB</td>\n",
-       "      <td>749.00</td>\n",
+       "      <th>92</th>\n",
+       "      <td>Apple iPhone 13 mini 256GB Starlight</td>\n",
+       "      <td>1054.24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>Apple iPhone 14 Plus 256GB Starlight</td>\n",
-       "      <td>1109.00</td>\n",
+       "      <th>93</th>\n",
+       "      <td>Apple iPhone 13 512GB Midnight</td>\n",
+       "      <td>1191.64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>Apple iPhone 14 Plus 256GB Blue</td>\n",
-       "      <td>1109.00</td>\n",
+       "      <th>94</th>\n",
+       "      <td>Apple iPhone 13 Pro, juodas, 6GB/256GB</td>\n",
+       "      <td>1589.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>Apple iPhone 14 Plus 512GB Purple</td>\n",
-       "      <td>1394.63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>Apple iPhone 14 Plus 256GB Purple</td>\n",
-       "      <td>1109.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>Apple iPhone 14 Pro Max 512GB Silver</td>\n",
-       "      <td>2200.36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>Apple iPhone 14 Pro Max 1TB Space Black</td>\n",
-       "      <td>2001.33</td>\n",
+       "      <th>95</th>\n",
+       "      <td>Apple iPhone 13 512GB RED</td>\n",
+       "      <td>1139.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>96 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -296,50 +111,15 @@
        "1   Apple iPhone 12 Pro Max, mėlynas, atnaujintas   979.00\n",
        "2         Apple iPhone 12 Pro, aukso, atnaujintas   854.00\n",
        "3            Apple iPhone 14, raudonas, 6GB/128GB   890.38\n",
-       "4           Apple iPhone SE 64GB Midnight 3rd gen   532.99\n",
-       "5              Apple iPhone 11, juodas, 4GB/128GB   619.00\n",
-       "6                  Apple iPhone 14 128GB Midnight   843.08\n",
-       "7           Apple iPhone 14 Pro 128GB Deep Purple  1109.00\n",
-       "8                  Apple iPhone 13 256GB Midnight   979.00\n",
-       "9               Apple iPhone 11, juodas, 4GB/64GB   529.00\n",
-       "10          Apple iPhone 14 Pro 128GB Space Black  1109.00\n",
-       "11                 Apple iPhone 13 128GB Midnight   759.00\n",
-       "12            Apple iPhone 14 Plus 128GB Midnight  1113.09\n",
-       "13                 Apple iPhone 14 Pro 128GB Gold  1109.00\n",
-       "14                   Apple iPhone 14 256GB Purple  1094.89\n",
-       "15                Apple iPhone 13 128GB Starlight   759.00\n",
-       "16                     Apple iPhone 12 64GB Black   619.00\n",
-       "17                     Apple iPhone 11 64GB White   529.00\n",
-       "18      Apple iPhone 14 Pro Max 256GB Space Black  1929.00\n",
-       "19          Apple iPhone 14 Pro 512GB Deep Purple  1667.43\n",
-       "20                    Apple iPhone 13 256GB Green  1094.37\n",
-       "21                    Apple iPhone 12 256GB White  1039.00\n",
-       "22                      Apple iPhone 14 128GB RED   972.05\n",
-       "23                     Apple iPhone 12 128GB Blue   759.00\n",
-       "24      Apple iPhone 14 Pro Max 512GB Deep Purple  2173.89\n",
-       "25        Apple iPhone 13 mini, žalias, 4GB/256GB  1109.00\n",
-       "26         Apple iPhone 14, violetinis, 6GB/128GB   939.00\n",
-       "27      Apple iPhone 14 Pro Max 128GB Deep Purple  1204.25\n",
-       "28            Apple iPhone 14 Plus 256GB Midnight  1245.03\n",
-       "29        Apple iPhone SE 128GB Starlight 3rd gen   823.89\n",
-       "30                     Apple iPhone 13 128GB Blue   748.99\n",
-       "31           Apple iPhone 13 mini 128GB Starlight   759.00\n",
-       "32                       Apple iPhone 12 64GB RED   605.99\n",
-       "33              Apple iPhone XR, juodas, 3GB/64GB   554.29\n",
-       "34     Apple iPhone 14 Pro, violetinis, 6GB/256GB  1339.00\n",
-       "35                 Apple iPhone 14 Plus 512GB RED  1439.00\n",
-       "36           Apple iPhone 14 Pro Max 128GB Silver  1706.25\n",
-       "37      Apple iPhone 14 Pro Max 256GB Deep Purple  1872.91\n",
-       "38               Apple iPhone SE 64GB RED 3rd gen   539.00\n",
-       "39           Apple iPhone 13, raudonas, 4GB/128GB   749.00\n",
-       "40                     Apple iPhone 13 512GB Pink  1261.67\n",
-       "41             Apple iPhone 13, žalias, 4GB/128GB   749.00\n",
-       "42           Apple iPhone 14 Plus 256GB Starlight  1109.00\n",
-       "43                Apple iPhone 14 Plus 256GB Blue  1109.00\n",
-       "44              Apple iPhone 14 Plus 512GB Purple  1394.63\n",
-       "45              Apple iPhone 14 Plus 256GB Purple  1109.00\n",
-       "46           Apple iPhone 14 Pro Max 512GB Silver  2200.36\n",
-       "47        Apple iPhone 14 Pro Max 1TB Space Black  2001.33"
+       "4           Apple iPhone SE 64GB Midnight 3rd gen   539.00\n",
+       "..                                            ...      ...\n",
+       "91                 Apple iPhone 13 mini 128GB RED   748.99\n",
+       "92           Apple iPhone 13 mini 256GB Starlight  1054.24\n",
+       "93                 Apple iPhone 13 512GB Midnight  1191.64\n",
+       "94         Apple iPhone 13 Pro, juodas, 6GB/256GB  1589.00\n",
+       "95                      Apple iPhone 13 512GB RED  1139.00\n",
+       "\n",
+       "[96 rows x 2 columns]"
       ]
      },
      "metadata": {},
@@ -409,9 +189,11 @@
     "if not url_pages.isnumeric() or int(url_pages) < 1:\n",
     "    print(f'{url_pages} is not a valid page number. Default value of 1 was set')\n",
     "    url_pages = 1\n",
+    "else:\n",
+    "    url_pages = int(url_pages)\n",
     "\n",
     "for page_number in range(1, url_pages + 1):\n",
-    "    url = f\"{brand_url}&page={page_number}\"\n",
+    "    url = f\"{brand_url}&page={str(page_number)}\"\n",
     "    df = pd.DataFrame()\n",
     "    scrape_website(url)\n",
     "\n",
@@ -464,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
